bug fix: set position top and z-index to make navbar sticky

--- a/src/assets/sass/navbar.scss
+++ b/src/assets/sass/navbar.scss
@@ -7,9 +7,11 @@
     min-width: 100%;
     flex-direction: row;
     position: sticky;
+    top:0;
+    z-index: 1;
     max-height: 100px;
     min-height: 50px;
-    background-color: #010203;
+    background-color: rgba(1,2,3,0.9);
   }
   nav.hidden {
     header {
